Mise en place du promise

--- a/index.html
+++ b/index.html
@@ -72,16 +72,21 @@
 				</div>
 			</div>
 		</section>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
+
+		<!-- =================================== Promise section ===============================  -->
+		<section id="promise" class="py-5 mt-5 promise-bg px-2">
+			<div class="container-sm border-maron px-3 py-1">
+				<div class="row card-bg">
+					<div class="col-12 py-5 text-center">
+						<h3 class="card-title text-uppercase card-h2 mb-0">Our Promise</h3>
+						<p class="text-uppercase card-h3">To You</p>
+						<p class="card-p">
+							When you walk into our shop to start your day, we are dedicated to providing you with friendly service, a welcoming atmosphere, and above all else, excellent products made with the highest quality ingredients. If you are not satisfied, please let us know and we will do whatever we can to make things right!
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
 	</main>
 
 
