--- a/index.html
+++ b/index.html
@@ -51,22 +51,22 @@
 
 	<main>
 		<!-- ======================= Acceuil section ====================== -->
-		<section id="fresh-coffee" class="py-5 mt-5">
+		<section id="fresh-coffee" class="py-5 px-0 mt-5">
 			<div class="container-sm">
-				<div class="row position-relative position-initial gy-3">
-					<div class="col-lg-6 col-12 position-absolute position-initial mt-lg-5 order-lg-1 order-2">
-						<div class="card card-bg py-sm-5 py-3 px-sm-5 px-2">
-							<div class="card-body text-center position-relative position-initial">
+				<div class="row gy-3 position-lg-relative">
+					<div class="col-lg-6 col-12 position-lg-absolute mt-lg-5 order-lg-1 order-2">
+						<div class="card card-bg py-sm-2 py-2 px-sm-3 px-2">
+							<div class="card-body text-center position-lg-relative">
 								<h3 class="card-title text-uppercase card-h2 mb-0">Fresh Coffee</h3>
 								<p class="text-uppercase card-h3">Worth <br> Drinking</p>
 								<p class="card-text card-p">
 									Every cup of our quality artisan coffee starts with locally sourced, hand picked ingredients. Once you try it, our coffee will be a blissful addition to your everyday morning routine - we guarantee it!
 								</p>
-								<button type="button" class="btn btn-maron py-3 px-3 mt-lg-0 mt-3 position-absolute position-initial">Visit Us Today</button>
+								<button type="button" class="btn btn-maron py-3 px-3 mt-lg-0 mt-3 position-lg-absolute">Visit Us Today</button>
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-6 col-12 photo-acceuil order-lg-2 order-1">
+					<div class="col-lg-12 col-12  menu-picture order-lg-2 order-1">
 						<img src="img/menu.jpg" alt="Photo acceuil" class="img-fluid w-100">
 					</div>
 				</div>
@@ -89,7 +89,9 @@
 		</section>
 	</main>
 
-
+	<footer class="mt-5 pt-5 pb-4 d-flex align-items-center justify-content-center">
+		<p class="text-center">Copyright &copy; Your Website 2021</p>
+	</footer>
 
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
