--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 	<main>
 		<!-- ======================= Acceuil section ====================== -->
-		<section id="fresh-coffee" class="py-5 px-0 mt-5">
+		<section id="fresh-coffee" class="pt-5 pb-0 px-0 mt-5">
 			<div class="container-sm">
 				<div class="row gy-3 position-lg-relative">
 					<div class="col-lg-6 col-12 position-lg-absolute mt-lg-5 order-lg-1 order-2">
@@ -74,7 +74,7 @@
 		</section>
 
 		<!-- =================================== Promise section ===============================  -->
-		<section id="promise" class="py-5 mt-5 promise-bg px-2">
+		<section id="promise" class="py-5 mt-0 promise-bg px-2">
 			<div class="container-sm border-maron px-3 py-1">
 				<div class="row card-bg">
 					<div class="col-12 py-5 text-center">
