Creation de la page about

--- a/about.html
+++ b/about.html
@@ -49,6 +49,27 @@
 		</nav>
 	</header>
 
+	<main>
+		<section id="about" class="pt-4 pb-3 mt-5 px-sm-0 px-3">
+			<div class="container-sm position-lg-relative position-static">
+				<div class="row d-lg-flex justify-content-lg-center gy-3">
+					<div class="col-lg-12 col-12 px-0">
+						<img src="img/about.jpg" alt="Place pour boire" class="img-fluid">
+					</div>
+					<div class="col-lg-10 col-12 card-bg p-sm-5 p-3 position-lg-absolute position-static">
+						<h3 class="card-h2 text-uppercase">Strong Coffee, Strong Roots</h3>
+						<p class="card-h3 text-uppercase">About Our Coffee</p>
+						<p class="card-p">
+							Founded in 1987 by the Hernandez brothers, our establishment has been serving up rich coffee sourced from artisan farmers in various regions of South and Central America. We are dedicated to travelling the world, finding the best coffee, and bringing back to you here in our cafe.
+						</p>
+						<p class="card-p">
+							We guarantee that you will fall in lust with our decadent blends the moment you walk inside until you finish your last sip. Join us for your daily routine, an outing with friends, or simply just to enjoy some alone time.
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
+	</main>
 
 
 
