Debuggage de la page about

--- a/about.html
+++ b/about.html
@@ -51,12 +51,12 @@
 
 	<main>
 		<section id="about" class="pt-4 pb-3 mt-5 px-sm-0 px-2">
-			<div class="container-sm position-lg-relative position-static">
+			<div class="container-sm position-relative">
 				<div class="row d-lg-flex justify-content-lg-center gy-3">
 					<div class="col-lg-12 col-12 px-0">
 						<img src="img/about.jpg" alt="Place pour boire" class="img-fluid">
 					</div>
-					<div class="col-lg-10 col-12 card-bg p-sm-5 p-3 position-lg-absolute position-static">
+					<div class="col-lg-10 col-12 card-bg p-sm-5 p-3 position-absolute">
 						<h3 class="card-h2 text-uppercase text-sm-start text-center">Strong Coffee, Strong Roots</h3>
 						<p class="card-h3 text-uppercase text-sm-start text-center">About Our Coffee</p>
 						<p class="card-p">
