--- a/products.html
+++ b/products.html
@@ -49,7 +49,45 @@
 		</nav>
 	</header>
 
-
+	<main>
+		<section id="products-1" class="pt-5 pb-1 px-3 products">
+			<div class="container-sm position-relative">
+				<div class="row gy-3">
+					<div class="col-lg-6 col-12 col-right card-bg p-4 position-absolute">
+						<h3 class="card-h2 text-uppercase">Blended To Perfecction</h3>
+						<p class="card-h3 text-uppercase">Coffees & Teas</p>
+					</div>
+					<div class="col-lg-12 col-12 px-0 d-flex justify-content-center">
+						<img src="img/tasseCaffe.jpg" alt="Tasse de cafe autour d'une table" class="img-fluid">
+					</div>
+					<div class="col-lg-6 col-12 col-left card-bg p-4 position-absolute">
+						<p class="card-p">
+							We take pride in our work, and it shows. Every time you order a beverage from us, we guarantee that it will be an experience worth having. Whether it's our world famous Venezuelan Cappuccino, a refreshing iced herbal tea, or something as simple as a cup of speciality sourced black coffee, you will be coming back for more.
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section id="products-2" class="px-2 py-5 products px-3">
+			<div class="container-sm position-relative">
+				<div class="row gy-3">
+					<div class="col-lg-6 col-12 col-right-2 card-bg p-4 position-absolute">
+						<h3 class="card-h2 text-uppercase">Delicious Treats, Good Eats</h3>
+						<p class="card-h3 text-uppercase">Bakery & Kitchen</p>
+					</div>
+					<div class="col-lg-12 col-12 px-0 d-flex justify-content-center">
+						<img src="img/pain.jpg" alt="Tasse de cafe autour d'une table" class="img-fluid">
+					</div>
+					<div class="col-lg-6 col-12 col-left-2 card-bg p-4 position-absolute">
+						<p class="card-p">
+							Our seasonal menu features delicious snacks, baked goods, and even full meals perfect for breakfast or lunchtime. We source our ingredients from local, oragnic farms whenever possible, alongside premium vendors for specialty goods.
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section></section>
+	</main>
 
 
 
