--- a/store.html
+++ b/store.html
@@ -18,6 +18,9 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Quintessential&family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
 	<header class="pt-lg-5 pt-0">
@@ -48,6 +51,55 @@
 	    	</div>
 		</nav>
 	</header>
+
+	<main>
+		<section id="come-on" class="py-5 mt-5 promise-bg px-3">
+			<div class="container-sm border-maron my-4 py-1 px-3">
+				<div class="row card-bg">
+					<div class="col-12 py-5">
+						<h3 class="card-title text-uppercase card-h2 mb-0 text-center">Come on in</h3>
+						<p class="text-uppercase card-h3 text-center">We're Open</p>
+						<div class="open-days mt-4 come-on">
+							<p><span class="days">Sunday</span><span>Closed</span></p>
+							<p><span class="days">Monday</span><span>7:00 AM to 8:00 PM</span></p>
+							<p><span class="days">Tuesday</span><span>7:00 AM to 8:00 PM</span></p>
+							<p><span class="days">Wednesday</span><span>7:00 AM to 8:00 PM</span></p>
+							<p><span class="days">Thursday</span><span>7:00 AM to 8:00 PM</span></p>
+							<p><span class="days">Friday</span><span>7:00 AM to 8:00 PM</span></p>
+							<p><span class="days">Saturday</span><span>9:00 AM to 5:00 PM</span></p>
+						</div>
+						<h2 class="text-center card-h2 mt-5 come-on">1116 Orchard Street</h2>
+						<p class="text-center come-on">Golden Valley, Minnesota</p>
+						<div class="contact-me mt-5">
+							<p class="text-center p-0 m-0 come-on">Call anytime</p>
+							<p class="text-center p-0 m-0 come-on">(317)585-8468</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- ======================= about section ========================= -->
+		<section id="about" class="pt-4 pb-3 mt-5 px-sm-0 px-3">
+			<div class="container-sm position-relative">
+				<div class="row d-lg-flex justify-content-lg-center gy-3">
+					<div class="col-lg-12 col-12 px-0">
+						<img src="img/about.jpg" alt="Place pour boire" class="img-fluid">
+					</div>
+					<div class="col-lg-10 col-12 card-bg p-sm-5 p-3 position-absolute">
+						<h3 class="card-h2 text-uppercase text-sm-start text-center">Strong Coffee, Strong Roots</h3>
+						<p class="card-h3 text-uppercase text-sm-start text-center">About Our Coffee</p>
+						<p class="card-p">
+							Founded in 1987 by the Hernandez brothers, our establishment has been serving up rich coffee sourced from artisan farmers in various regions of South and Central America. We are dedicated to travelling the world, finding the best coffee, and bringing back to you here in our cafe.
+						</p>
+						<p class="card-p">
+							We guarantee that you will fall in lust with our decadent blends the moment you walk inside until you finish your last sip. Join us for your daily routine, an outing with friends, or simply just to enjoy some alone time.
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
+	</main>
 
 
 
